hphp/test/zend/good/ext/simplexml/tests/simplexml_import_dom.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("simplexml")) die("skip");
if (!extension_loaded("dom")) die("skip dom extension not loaded");
}
