hphp/test/zend/bad/ext/openssl/tests/sni_server.php.skipif
<?php
if (!extension_loaded("openssl")) die("skip openssl not loaded");